map isnt used up anymore if there isn't enough space for portals
stations now tick more smoothly
salvaging maps now gives map related currencies or ores only.
added map currencies like +tier +lvl etc
overlay now updates more often to be smoother
map back pearl now teleports back instantly
hud should be back faster now after changing dimensions
adventure map bonus loot is now smaller cus i'm adding loot crate as completition reward
pressing same keybind should now close the gui
map leave pearl no longer shows map stats, thats now in new map info gui
maps have less affixes but they're stronger
added main hub gui 
maps now have a quest and loot crate as a reward!
armor requirements are no longer random (wis or int), now they are always wis and int etc (existing gear will have a change, beware)
enchanted/renamed items no longer get auto put in bags. Should stop some annoyances
configs should now sync to client on login
spell damage renamed to spell power. Should make more sense if nature power increases healing, than nature damage increasing healing
loot now drops based on highest damager. So if you do most dmg to mob and it dies to fire, it will still drop loot!
fixed scaling spell dmg not being applied
removed some stats based on old spells which no longer exist. (runewords affected have other stats boosted)
talent and spell trees are now FULLSCREEN!
as there were too many keybinds, now guis will have to be accessed from the main hub (H). (Main hub, Hotbar swap + 5 hotbar buttons is already 7 keybinds!)
lowered stat scaling a bit
staffs and wands now need more energy and less mana.
added config for logging registry entries like compatible items
added config for setting specific dimension lvl 1 area in case spawn position is buggy or you have other needs
base player stats are now in the folder for json configs. You can add any stat now.
added configs for loot and xp penalty for level difference and if it should activate if player is lower lvl or just when higher lvl.