@@ -4,18 +4,18 @@ import com.robertx22.mine_and_slash.uncommon.utilityclasses.RandomUtils;
 
 public class MinMax {
 
-    public int Min;
-    public int Max;
+    public int min;
+    public int max;
 
     public MinMax(int min, int max) {
-        this.Min = min;
-        this.Max = max;
+        this.min = min;
+        this.max = max;
     }
 
     public boolean isInRange(int num) {
 
-        if (num >= Min) {
-            if (num <= Max) {
+        if (num >= min) {
+            if (num <= max) {
                 return true;
             }
         }
@@ -24,6 +24,6 @@ public class MinMax {
     }
 
     public int genPercent() {
-        return RandomUtils.RandomRange(Min, Max);
+        return RandomUtils.RandomRange(min, max);
     }
 }
