@@ -1,1 +1,0 @@
-,DESKTOP-RFK2F26/User,,01.02.2020 19:14,file:///C:/Users/User/AppData/Roaming/OfficeDocOpener/4;
